photo gallery with state finished, bug: photo being cropped

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,23 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.gallery {
+  line-height: 0;
+  -webkit-column-count: 3;
+  -moz-column-count: 3;
+  column-count: 3;
+  -webkit-column-width: 33%;
+  -moz-column-width: 33%;
+  column-width:33%;
+  column-gap: 12px;
+  height: 100%;
+}
+
+.gallery .photo-container {
+  -webkit-transition: all 350ms ease;
+  -moz-transition: all 350ms ease;
+  transition: all 350ms ease;
+  cursor: pointer;
+  margin-bottom: 12px;
+}
